RESOLVED FIXED199265
[SOUP] WebSockets: runtime critical warning when closing the connection in some cases
https://bugs.webkit.org/show_bug.cgi?id=199265
Summary [SOUP] WebSockets: runtime critical warning when closing the connection in so...
Carlos Garcia Campos
Reported 2019-06-27 04:49:05 PDT
(process:16024): libsoup-CRITICAL **: 13:46:08.280: soup_websocket_connection_close: assertion '!pv->close_sent' failed
Attachments
Patch (1.68 KB, patch)
2019-06-27 04:51 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2019-06-27 04:51:38 PDT
Carlos Garcia Campos
Comment 2 2019-06-28 00:47:02 PDT
Note You need to log in before you can comment on or make changes to this bug.