[SOUP] WebSockets: runtime critical warning when closing the connection in some cases https://bugs.webkit.org/show_bug.cgi?id=199265

Reviewed by Michael Catanzaro.

Ensure the connection is still open before calling soup_websocket_connection_close().

* NetworkProcess/soup/WebSocketTaskSoup.cpp:
(WebKit::WebSocketTask::close):

Canonical link: https://commits.webkit.org/213256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246923 268f45cc-cd09-0410-ab3c-d52691b4dbfc